# Parallel_DT

./: .gitignore  README.md
Cpp_threads/: CMakeLists.txt  Delaunay_triangulation.cpp  Delaunay_triangulation.h  Face.cpp  Face.h  Face_circulator.cpp  Face_circulator.h  Lock.cpp  Lock.h  Point.cpp  Triangulation.cpp  Triangulation.h  Vertex.cpp  Vertex.h  predicates.c  predicates.h  triangulate.cpp
OpenMP/: CMakeLists.txt  Delaunay_triangulation.cpp  Delaunay_triangulation.h  Face.cpp  Face.h  Face_circulator.h  Lock.cpp  Lock.h  Point.h  Triangulation.cpp  Vertex.cpp  Vertex.h  showme  triangulate.cpp
Sequential/: CMakeLists.txt  Delaunay_triangulation.cpp  Delaunay_triangulation.h  Face.cpp  Face.h  Face_circulator.cpp  Triangulation.cpp  Triangulation.h  Vertex.cpp  Vertex.h  triangulate.cpp
